<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableRow>

        <ImageView
            android:id="@+id/imgSpinner"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/imgDescription"
            android:paddingRight="15sp"
            android:paddingBottom="10sp"
            android:src="@drawable/spinner" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/txtGymDesc1"
            android:paddingBottom="10sp"
            android:textSize="25sp" />

    </TableRow>

    <TableRow>

        <ImageView
            android:id="@+id/imgWeights"
            android:contentDescription="@string/imgDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/weights"
            android:paddingBottom="10sp"
            android:paddingRight="15sp" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/txtGymDesc2"
            android:paddingBottom="10sp"
            android:textSize="25sp" />

    </TableRow>

    <TableRow>

        <ImageView
            android:id="@+id/imgCleaning"
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/imgDescription"
            android:paddingRight="15sp"
            android:paddingBottom="10sp"
            android:src="@drawable/cleaning" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/txtGymDesc3"
            android:paddingBottom="10sp"
            android:textSize="25sp" />

    </TableRow>

    <TableRow>

        <ImageView
            android:id="@+id/imgRockClimbing"
            android:layout_width="347dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/imgDescription"
            android:paddingRight="15sp"
            android:paddingBottom="10sp"
            android:src="@drawable/rock_climbing" />

        <TextView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/txtGymDesc4"
            android:paddingBottom="10sp"
            android:textSize="25sp" />

    </TableRow>

</TableLayout>